ndless/ndless-sdk/thirdparty/zlib/configure.log
--------------------
./configure --static
Ср 27 мая 2026 19:29:35 EEST
Using arm-none-eabi-ar
Using arm-none-eabi-ranlib
Using arm-none-eabi-nm
=== ztest2149699.c ===
extern int getchar();
int hello() {return getchar();}
===
nspire-gcc -c ztest2149699.c
... using gcc

Checking for obsessive-compulsive compiler options...
=== ztest2149699.c ===
int foo() { return 0; }
===
nspire-gcc -c -O3 -c ztest2149699.c

Building static library libz.a version 1.2.11 with nspire-gcc.

=== ztest2149699.c ===
#include <stdio.h>
#include <stdlib.h>
size_t dummy = 0;
===
nspire-gcc -c -O3 -c ztest2149699.c
Checking for size_t... Yes.


=== ztest2149699.c ===
#include <sys/types.h>
off64_t dummy = 0;
===
nspire-gcc -c -O3 -c -D_LARGEFILE64_SOURCE=1 ztest2149699.c
ztest2149699.c:2:1: error: unknown type name 'off64_t'; did you mean '_off64_t'?
    2 | off64_t dummy = 0;
      | ^~~~~~~
      | _off64_t
(exit code 1)
Checking for off64_t... No.

=== ztest2149699.c ===
#include <stdio.h>
int main(void) {
  fseeko(NULL, 0, 0);
  return 0;
}
===
nspire-gcc -O3 -c -o ztest2149699 ztest2149699.c
Checking for fseeko... Yes.

=== ztest2149699.c ===
#include <string.h>
#include <errno.h>
int main() { return strlen(strerror(errno)); }
===
nspire-gcc -O3 -c -o ztest2149699 ztest2149699.c
Checking for strerror... Yes.

=== ztest2149699.c ===
#include <unistd.h>
int main() { return 0; }
===
nspire-gcc -c -O3 -c ztest2149699.c
Checking for unistd.h... Yes.

=== ztest2149699.c ===
#include <stdarg.h>
int main() { return 0; }
===
nspire-gcc -c -O3 -c ztest2149699.c
Checking for stdarg.h... Yes.

=== ztest2149699.c ===
#include <stdio.h>
#include <stdarg.h>
#include "zconf.h"
int main()
{
#ifndef STDC
  choke me
#endif
  return 0;
}
===
nspire-gcc -c -O3 -c ztest2149699.c
Checking whether to use vs[n]printf() or s[n]printf()... using vs[n]printf().

=== ztest2149699.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return 0;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
nspire-gcc -O3 -c -o ztest2149699 ztest2149699.c
Checking for vsnprintf() in stdio.h... Yes.

=== ztest2149699.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  int n;
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  n = vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return n;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
nspire-gcc -c -O3 -c ztest2149699.c
Checking for return value of vsnprintf()... Yes.

=== ztest2149699.c ===
#define ZLIB_INTERNAL __attribute__((visibility ("hidden")))
int ZLIB_INTERNAL foo;
int main()
{
  return 0;
}
===
nspire-gcc -c -O3 -c ztest2149699.c
Checking for attribute(visibility) support... Yes.

ALL = static
AR = arm-none-eabi-ar
ARFLAGS = rc
CC = nspire-gcc
CFLAGS = -O3 -c -DHAVE_HIDDEN
CPP = nspire-gcc -E
EXE =
LDCONFIG = ldconfig
LDFLAGS =
LDSHARED = nspire-gcc
LDSHAREDLIBC = -lc
OBJC = $(OBJZ) $(OBJG)
PIC_OBJC = $(PIC_OBJZ) $(PIC_OBJG)
RANLIB = arm-none-eabi-ranlib
SFLAGS = -O3 -c -fPIC -DHAVE_HIDDEN
SHAREDLIB =
SHAREDLIBM =
SHAREDLIBV =
STATICLIB = libz.a
TEST = all teststatic
VER = 1.2.11
Z_U4 =
SRCDIR =
exec_prefix = ${prefix}
includedir = ${prefix}/include
libdir = ${exec_prefix}/lib
mandir = ${prefix}/share/man
prefix = /usr/local
sharedlibdir = ${libdir}
uname = eabi
--------------------


